--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "homepage": "http",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "date-fns": "^2.19.0",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "express-ejs-layouts": "^2.2.0",
